--- a/index.html
+++ b/index.html
@@ -7,65 +7,52 @@
 
 <style>
 *{box-sizing:border-box;font-family:Arial;margin:0;padding:0}
-body{background:#0f3d2e;color:#fff;min-height:100vh}
+body{background:#0f3d2e;color:#fff}
 
-/* CENTER */
+/* LOGIN */
 .center{
   min-height:100vh;
   display:flex;
   align-items:center;
   justify-content:center;
 }
-
-/* CARD */
 .card{
   background:#134e3a;
   width:90%;
   max-width:360px;
   padding:20px;
   border-radius:14px;
-  box-shadow:0 10px 30px rgba(0,0,0,.4);
 }
-
-h1{text-align:center;margin-bottom:16px}
-
 input,button{
   width:100%;
   padding:12px;
+  margin-bottom:12px;
   border:none;
   border-radius:8px;
-  margin-bottom:12px;
-  font-size:15px;
 }
+button{background:#22c55e;font-weight:bold}
+.error{display:none;background:#dc2626;padding:10px;text-align:center}
 
-input{background:#e5f6ef;color:#000}
-button{
-  background:#22c55e;
-  font-weight:bold;
-  cursor:pointer;
-}
-
-.error{
-  background:#dc2626;
-  padding:10px;
-  border-radius:8px;
-  text-align:center;
-  display:none;
-}
-
-/* DASHBOARD */
+/* APP */
 header{
-  background:#14532d;
-  padding:14px;
+  background:linear-gradient(rgba(0,0,0,.55),rgba(0,0,0,.55)),
+  url('https://i.imgur.com/XXXXXXX.jpg'); /* ganti nanti */
+  background-size:cover;
+  padding:20px;
   text-align:center;
   font-size:20px;
   font-weight:bold;
 }
-
-.menu{
+.banner{
   padding:20px;
+  background:#134e3a;
+  margin:14px;
+  border-radius:12px;
+  text-align:center;
 }
-
+.menu{
+  padding:14px;
+}
 .menu button{
   background:#22c55e;
   margin-bottom:14px;
@@ -77,7 +64,7 @@ header{
 <!-- LOGIN -->
 <div id="loginPage" class="center">
   <div class="card">
-    <h1>Dimdim Dino POS</h1>
+    <h2 style="text-align:center">Dimdim Dino POS</h2>
     <input id="username" placeholder="Username">
     <input id="password" type="password" placeholder="Password">
     <button onclick="login()">MASUK</button>
@@ -85,34 +72,34 @@ header{
   </div>
 </div>
 
-<!-- DASHBOARD -->
+<!-- APP -->
 <div id="appPage" style="display:none">
-  <header>DIMDIM DINO POS</header>
-  <div class="menu">
-    <button onclick="alert('Kasir (next step)')">KASIR</button>
-    <button onclick="alert('Daftar Menu (next step)')">DAFTAR MENU</button>
-    <button onclick="alert('Laporan (next step)')">LAPORAN</button>
-    <button onclick="logout()">LOGOUT</button>
-  </div>
+
+<header>DIMDIM DINO POS</header>
+
+<div class="banner">
+  <h3>Bekerja Itu Punya Cerita</h3>
+  <p>Pelan tapi konsisten, biar jejakmu jadi berarti.</p>
+</div>
+
+<div class="menu">
+  <button onclick="goKasir()">KASIR</button>
+  <button>DAFTAR MENU</button>
+  <button>LAPORAN</button>
+  <button onclick="logout()">LOGOUT</button>
+</div>
+
 </div>
 
 <script>
-// akun awal
-const USERS = [
-  {username:'admin',password:'1234',role:'owner'}
-];
+const USERS=[{u:'admin',p:'1234'}];
 
 function login(){
-  const u = username.value;
-  const p = password.value;
-  const user = USERS.find(x=>x.username===u && x.password===p);
-
-  if(!user){
-    error.style.display='block';
-    return;
+  const u=username.value,p=password.value;
+  if(!USERS.find(x=>x.u===u&&x.p===p)){
+    error.style.display='block';return;
   }
-
-  localStorage.setItem('login',JSON.stringify(user));
+  localStorage.setItem('login','1');
   showApp();
 }
 
@@ -122,14 +109,15 @@ function showApp(){
 }
 
 function logout(){
-  localStorage.removeItem('login');
+  localStorage.clear();
   location.reload();
 }
 
-// auto login
-if(localStorage.getItem('login')){
-  showApp();
+function goKasir(){
+  alert('Kasir akan dibuat di tahap berikutnya');
 }
+
+if(localStorage.getItem('login')) showApp();
 </script>
 
 </body>
