--- a/index.html
+++ b/index.html
@@ -8,69 +8,25 @@
 <style>
 *{box-sizing:border-box;font-family:Arial;margin:0;padding:0}
 body{background:#0f3d2e;color:#fff}
-button{width:100%;padding:14px;border:none;border-radius:12px;background:#22c55e;font-weight:bold;margin-top:10px}
-input{width:100%;padding:12px;border-radius:10px;border:none;margin-bottom:10px}
+button,input{width:100%;padding:12px;border:none;border-radius:10px;margin-top:8px}
+button{background:#22c55e;font-weight:bold}
 
 /* LAYOUT */
-header{
-  background:#0b2f23;
-  padding:14px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-header span{font-weight:bold}
-
-/* CARD */
-.box{
-  background:#134e3a;
-  margin:14px;
-  padding:16px;
-  border-radius:16px;
-}
-
-/* LOGIN */
+header{background:#0b2f23;padding:14px;text-align:center;font-weight:bold}
+.box{background:#134e3a;margin:14px;padding:16px;border-radius:16px}
 .center{min-height:100vh;display:flex;align-items:center;justify-content:center}
-
-/* MENU */
-.grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
-.menu-item{
-  background:#22c55e;
-  padding:14px;
-  border-radius:14px;
-  text-align:center;
-  font-weight:bold;
-}
-.menu-item small{display:block;font-weight:normal}
+.grid{display:grid;grid-template-columns:1fr 1fr;gap:10px}
+.menu-btn{background:#22c55e;color:#000;padding:14px;border-radius:12px;text-align:center;font-weight:bold}
 
 /* MODAL */
-.modal{
-  display:none;
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.6);
-}
-.modal-content{
-  background:#134e3a;
-  margin:20% auto;
-  padding:20px;
-  border-radius:16px;
-  width:90%;
-  max-width:360px;
-}
+.modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,.6)}
+.modal-content{background:#134e3a;margin:15% auto;padding:20px;border-radius:16px;width:90%;max-width:360px}
 
 /* STRUK */
-#receipt{
-  width:58mm;
-  background:#fff;
-  color:#000;
-  padding:8px;
-  font-size:12px;
-}
+#receipt{width:58mm;background:#fff;color:#000;padding:8px;font-size:12px}
 .r{display:flex;justify-content:space-between}
 .c{text-align:center}
 hr{border:none;border-top:1px dashed #000;margin:6px 0}
-
 @media print{
   body *{visibility:hidden}
   #receipt,#receipt *{visibility:visible}
@@ -93,46 +49,48 @@ hr{border:none;border-top:1px dashed #000;margin:6px 0}
 
 <!-- HOME -->
 <div id="homePage" style="display:none">
-<header>
-  <span>DIMDIM DINO POS</span>
-  <button style="width:auto;padding:8px 12px" onclick="connectPrinter()">🖨️</button>
-</header>
+<header>DIMDIM DINO POS</header>
+<div class="box">
+  <button onclick="openOrder()">KASIR</button>
+  <button onclick="openMenu()">DAFTAR MENU</button>
+  <button onclick="alert('Laporan (next step)')">LAPORAN</button>
+  <button onclick="logout()">LOGOUT</button>
+</div>
+</div>
+
+<!-- DAFTAR MENU -->
+<div id="menuPage" style="display:none">
+<header>DAFTAR MENU</header>
 
 <div class="box">
-  <h3>Bekerja Itu Punya Cerita</h3>
-  <p>Pelan tapi konsisten, biar jejakmu jadi berarti.</p>
+  <input id="mName" placeholder="Nama Menu">
+  <input id="pCash" type="number" placeholder="Harga Cash">
+  <input id="pQris" type="number" placeholder="Harga QRIS">
+  <input id="pShopee" type="number" placeholder="Harga Shopee Food">
+  <input id="pGrab" type="number" placeholder="Harga Grab Food">
+  <input id="pGo" type="number" placeholder="Harga GoFood">
+  <button onclick="saveMenu()">SIMPAN MENU</button>
 </div>
 
 <div class="box">
-  <button onclick="openOrder()">KASIR</button>
-  <button onclick="alert('Daftar Menu (next)')">DAFTAR MENU</button>
-  <button onclick="alert('Laporan (next)')">LAPORAN</button>
-  <button onclick="logout()">LOGOUT</button>
+  <h3>Daftar Menu</h3>
+  <div id="menuList"></div>
+  <button onclick="backHome()">KEMBALI</button>
 </div>
 </div>
 
 <!-- KASIR -->
 <div id="kasirPage" style="display:none">
-<header>
-  <span>KASIR</span>
-  <span id="orderLabel"></span>
-</header>
+<header>KASIR (<span id="orderLabel"></span>)</header>
 
 <div class="box">
   <h3>Pilih Menu</h3>
-  <div class="grid">
-    <div class="menu-item" onclick="addItem('DIMSUM MIX 16',98000)">
-      DIMSUM MIX 16<small>Rp 98.000</small>
-    </div>
-    <div class="menu-item" onclick="addItem('DIMSUM MIX 8',55000)">
-      DIMSUM MIX 8<small>Rp 55.000</small>
-    </div>
-  </div>
+  <div class="grid" id="menuGrid"></div>
 </div>
 
 <div class="box">
   <h3>Keranjang</h3>
-  <div id="cart"></div>
+  <div id="cartList"></div>
   <hr>
   <b>Total: Rp <span id="total">0</span></b>
   <button onclick="openPayment()">BAYAR</button>
@@ -144,117 +102,126 @@ hr{border:none;border-top:1px dashed #000;margin:6px 0}
 <div id="orderModal" class="modal">
   <div class="modal-content">
     <h3>Pilih Order Type</h3>
-    <button onclick="setOrder('CASH')">Cash</button>
-    <button onclick="setOrder('QRIS')">QRIS</button>
-    <button onclick="setOrder('SHOPEE FOOD')">Shopee Food</button>
-    <button onclick="setOrder('GRAB FOOD')">Grab Food</button>
-    <button onclick="setOrder('GOFOOD')">GoFood</button>
-    <button style="background:#dc2626" onclick="closeOrder()">Batal</button>
+    <button onclick="setOrder('cash')">Cash</button>
+    <button onclick="setOrder('qris')">QRIS</button>
+    <button onclick="setOrder('shopee')">Shopee Food</button>
+    <button onclick="setOrder('grab')">Grab Food</button>
+    <button onclick="setOrder('gofood')">GoFood</button>
   </div>
 </div>
 
 <!-- PAYMENT -->
 <div id="payModal" class="modal">
   <div class="modal-content">
-    <h3>Metode Pembayaran</h3>
+    <h3>Pilih Payment</h3>
     <button onclick="pay('CASH')">Cash</button>
     <button onclick="pay('QRIS')">QRIS</button>
-    <button onclick="pay('SHOPEE FOOD')">Shopee Food</button>
-    <button onclick="pay('GRAB FOOD')">Grab Food</button>
+    <button onclick="pay('SHOPEE')">Shopee Food</button>
+    <button onclick="pay('GRAB')">Grab Food</button>
     <button onclick="pay('GOFOOD')">GoFood</button>
   </div>
 </div>
 
-<!-- STRUK -->
 <div id="receipt" style="display:none"></div>
 
 <script>
 /* LOGIN */
 const USERS=[{u:'admin',p:'1234'}];
 function login(){
-  if(!USERS.find(x=>x.u===username.value&&x.p===password.value)){
-    alert('Login gagal');return;
-  }
+  if(!USERS.find(x=>x.u===username.value&&x.p===password.value)){alert('Login gagal');return;}
   localStorage.setItem('login',1);
-  loginPage.style.display='none';
-  homePage.style.display='block';
+  show(homePage);
 }
 function logout(){localStorage.clear();location.reload()}
-if(localStorage.getItem('login')){loginPage.style.display='none';homePage.style.display='block'}
+if(localStorage.getItem('login')) show(homePage);
 
-/* ORDER */
-let cart=[],orderType='';
+/* MENU DATA */
+let menus=JSON.parse(localStorage.getItem('menus')||'[]');
+let cart=[],orderType='cash';
+
+function saveMenu(){
+  menus.push({
+    name:mName.value,
+    price:{
+      cash:+pCash.value,
+      qris:+pQris.value,
+      shopee:+pShopee.value,
+      grab:+pGrab.value,
+      gofood:+pGo.value
+    }
+  });
+  localStorage.setItem('menus',JSON.stringify(menus));
+  mName.value=pCash.value=pQris.value=pShopee.value=pGrab.value=pGo.value='';
+  renderMenuList();
+}
+function renderMenuList(){
+  menuList.innerHTML='';
+  menus.forEach((m,i)=>{
+    menuList.innerHTML+=`${m.name}<br>`;
+  });
+}
+function openMenu(){show(menuPage);renderMenuList()}
+
+/* KASIR */
 function openOrder(){orderModal.style.display='block'}
-function closeOrder(){orderModal.style.display='none'}
 function setOrder(t){
   orderType=t;
-  orderLabel.innerText=t;
+  orderLabel.innerText=t.toUpperCase();
   orderModal.style.display='none';
-  homePage.style.display='none';
-  kasirPage.style.display='block';
+  show(kasirPage);
+  renderKasirMenu();
 }
-function addItem(n,p){cart.push({n,p});render()}
-function render(){
-  cart.innerHTML='';
-  let t=0,html='';
-  cart.forEach(i=>{t+=i.p;html+=`${i.n} - Rp ${i.p.toLocaleString()}<br>`});
-  cartDiv.innerHTML=html;
+function renderKasirMenu(){
+  menuGrid.innerHTML='';
+  menus.forEach((m,i)=>{
+    menuGrid.innerHTML+=`
+      <div class="menu-btn" onclick="addItem(${i})">
+        ${m.name}<br>Rp ${m.price[orderType].toLocaleString()}
+      </div>`;
+  });
+}
+function addItem(i){
+  const m=menus[i];
+  cart.push({n:m.name,p:m.price[orderType]});
+  renderCart();
+}
+function renderCart(){
+  cartList.innerHTML='';
+  let t=0;
+  cart.forEach(i=>{t+=i.p;cartList.innerHTML+=`${i.n} - Rp ${i.p.toLocaleString()}<br>`});
   total.innerText=t.toLocaleString();
 }
-const cartDiv=document.getElementById('cart');
-function backHome(){cart=[];render();kasirPage.style.display='none';homePage.style.display='block'}
 
-/* STRUK NUMBER */
-function today(){return new Date().toISOString().slice(0,10)}
+/* STRUK */
 function strukNo(){
-  if(localStorage.getItem('d')!==today()){
-    localStorage.setItem('d',today());
-    localStorage.setItem('n',0);
-  }
-  let n=+localStorage.getItem('n')+1;
-  localStorage.setItem('n',n);
-  return n;
+  const d=new Date().toISOString().slice(0,10);
+  if(localStorage.getItem('d')!==d){localStorage.setItem('d',d);localStorage.setItem('n',0);}
+  let n=+localStorage.getItem('n')+1;localStorage.setItem('n',n);return n;
 }
-
-/* PAYMENT */
 function openPayment(){if(!cart.length)return alert('Keranjang kosong');payModal.style.display='block'}
-function pay(m){
+function pay(method){
   const no=strukNo();
   let t=0,items='';
   cart.forEach(i=>{t+=i.p;items+=`<div class="r"><span>${i.n}</span><span>${i.p.toLocaleString()}</span></div>`});
   receipt.innerHTML=`
     <div class="c"><b>DIMDIM DINO</b></div>
-    <div class="c">No ${no}</div><hr>
-    ${items}<hr>
+    <div class="c">No ${no}</div><hr>${items}<hr>
     <div class="r"><b>TOTAL</b><b>${t.toLocaleString()}</b></div>
-    <div class="c">${orderType} - ${m}</div>
+    <div class="c">${orderType.toUpperCase()} - ${method}</div>
     <div class="c">Terima Kasih</div>`;
   receipt.style.display='block';
-  printReceipt();
+  window.print();
   receipt.style.display='none';
-  cart=[];render();
-  payModal.style.display='none';
+  cart=[];renderCart();payModal.style.display='none';
 }
 
-/* BLUETOOTH */
-let printer=null;
-async function connectPrinter(){
-  try{
-    printer=await navigator.bluetooth.requestDevice({
-      filters:[{namePrefix:'RP'}],
-      optionalServices:[0x18f0]
-    });
-    alert('Printer terhubung');
-  }catch(e){alert('Gagal konek printer')}
+/* NAV */
+function show(p){
+  [loginPage,homePage,menuPage,kasirPage].forEach(x=>x.style.display='none');
+  p.style.display='block';
 }
-function printReceipt(){
-  if(printer){
-    window.print(); // placeholder ESC/POS next step
-  }else{
-    window.print();
-  }
-}
+function backHome(){cart=[];renderCart();show(homePage)}
 </script>
 
 </body>
-  </html>
+    </html>
