--- a/index.html
+++ b/index.html
@@ -8,58 +8,40 @@
 <style>
 *{box-sizing:border-box;font-family:Arial;margin:0;padding:0}
 body{background:#0f3d2e;color:#fff}
-
 .hidden{display:none}
 
-header{
-  background:#0b2f24;
-  padding:14px;
-  text-align:center;
-  font-weight:bold;
-  font-size:18px;
-}
-
+/* UI */
 .container{padding:16px}
+.card{background:#134e3a;padding:16px;border-radius:14px;margin-bottom:14px}
+button,input{width:100%;padding:12px;border:none;border-radius:10px;margin-top:10px}
+button{background:#22c55e;font-weight:bold}
+input{background:#fff;color:#000}
 
-.card{
-  background:#134e3a;
+/* Header */
+header{
+  background:#0b2f23;
   padding:16px;
-  border-radius:14px;
-  margin-bottom:16px;
-}
-
-input,button{
-  width:100%;
-  padding:12px;
-  margin-bottom:12px;
-  border:none;
-  border-radius:8px;
-}
-
-button{
-  background:#22c55e;
+  text-align:center;
+  font-size:20px;
   font-weight:bold;
 }
 
-.menu-grid{
+/* Menu Grid */
+.grid{
   display:grid;
-  grid-template-columns:1fr 1fr;
+  grid-template-columns:repeat(2,1fr);
   gap:12px;
 }
-
 .menu-btn{
   background:#22c55e;
   color:#000;
-  font-weight:bold;
   padding:14px;
   border-radius:12px;
   text-align:center;
+  font-weight:bold;
 }
-
-.list-item{
-  padding:6px 0;
-  border-bottom:1px solid rgba(255,255,255,.2);
-}
+.small{font-size:14px;opacity:.9}
+hr{margin:10px 0;border:1px solid rgba(255,255,255,.2)}
 </style>
 </head>
 
@@ -67,129 +49,135 @@ button{
 
 <header>DIMDIM DINO POS</header>
 
-<!-- HOME -->
-<div id="home" class="container">
+<!-- LOGIN -->
+<div id="login" class="container">
   <div class="card">
-    <button onclick="openKasir()">KASIR</button>
-    <button onclick="openMenu()">DAFTAR MENU</button>
+    <h3>Login Kasir</h3>
+    <input id="user" placeholder="Username">
+    <input id="pass" type="password" placeholder="Password">
+    <button onclick="login()">MASUK</button>
   </div>
 </div>
 
-<!-- DAFTAR MENU -->
-<div id="menuPage" class="container hidden">
+<!-- HOME -->
+<div id="home" class="container hidden">
   <div class="card">
-    <h3>Daftar Menu</h3>
-    <input id="menuName" placeholder="Nama menu">
-    <input id="menuPrice" type="number" placeholder="Harga">
-    <button onclick="saveMenu()">Simpan Menu</button>
+    <h3>Bekerja Itu Punya Cerita</h3>
+    <p class="small">Pelan tapi konsisten, biar jejakmu jadi berarti.</p>
+  </div>
 
-    <div id="menuList"></div>
+  <button onclick="openKasir()">KASIR</button>
+  <button onclick="openMenu()">DAFTAR MENU</button>
+  <button onclick="logout()">LOGOUT</button>
+</div>
 
+<!-- KASIR -->
+<div id="kasir" class="container hidden">
+  <div class="card">
+    <h3>Kasir</h3>
+    <p class="small">Klik menu untuk menambah</p>
+  </div>
+
+  <div id="menuList" class="grid"></div>
+
+  <div class="card">
+    <h3>Keranjang</h3>
+    <div id="cart"></div>
+    <hr>
+    <h3>Total: Rp <span id="total">0</span></h3>
+    <button onclick="resetCart()">Selesai</button>
     <button onclick="backHome()">Kembali</button>
   </div>
 </div>
 
-<!-- KASIR -->
-<div id="kasirPage" class="container hidden">
+<!-- DAFTAR MENU -->
+<div id="menu" class="container hidden">
   <div class="card">
-    <h3>Pilih Menu</h3>
-    <div class="menu-grid" id="menuButtons"></div>
+    <h3>Daftar Menu</h3>
+    <input id="menuName" placeholder="Nama menu">
+    <input id="menuPrice" placeholder="Harga" type="number">
+    <button onclick="saveMenu()">Simpan Menu</button>
   </div>
 
   <div class="card">
-    <h3>Keranjang</h3>
-    <div id="cartList"></div>
-    <h2>Total: Rp <span id="total">0</span></h2>
+    <h3>Menu Tersimpan</h3>
+    <div id="savedMenu"></div>
     <button onclick="backHome()">Kembali</button>
   </div>
 </div>
 
 <script>
-let menus = JSON.parse(localStorage.getItem('menus')) || [];
-let cart = [];
-let total = 0;
-
-function formatRp(n){
-  return n.toLocaleString('id-ID');
+/* AUTH */
+function login(){
+  if(user.value==='admin' && pass.value==='1234'){
+    localStorage.login=1;
+    show('home');
+  }else alert('Login gagal');
 }
+function logout(){
+  localStorage.clear();
+  location.reload();
+}
+if(localStorage.login) show('home');
 
-/* ===== MENU ===== */
+/* NAV */
+function show(id){
+  ['login','home','kasir','menu'].forEach(x=>{
+    document.getElementById(x).classList.add('hidden');
+  });
+  document.getElementById(id).classList.remove('hidden');
+}
+function backHome(){show('home')}
+function openKasir(){loadMenu();show('kasir')}
+function openMenu(){renderSaved();show('menu')}
+
+/* MENU DATA */
+let menus=JSON.parse(localStorage.menus||'[]');
+let cart=[];
+
 function saveMenu(){
-  const name = menuName.value.trim();
-  const price = Number(menuPrice.value);
-
-  if(!name || !price){
-    alert('Nama & harga wajib diisi');
-    return;
-  }
-
-  menus.push({ name, price });
-  localStorage.setItem('menus', JSON.stringify(menus));
-
-  menuName.value='';
-  menuPrice.value='';
-  renderMenuList();
+  if(!menuName.value||!menuPrice.value) return;
+  menus.push({name:menuName.value,price:Number(menuPrice.value)});
+  localStorage.menus=JSON.stringify(menus);
+  menuName.value='';menuPrice.value='';
+  renderSaved();
+}
+function renderSaved(){
+  savedMenu.innerHTML='';
+  menus.forEach(m=>{
+    savedMenu.innerHTML+=`<p>${m.name} - Rp ${m.price.toLocaleString()}</p>`;
+  });
 }
 
-function renderMenuList(){
+/* KASIR */
+function loadMenu(){
   menuList.innerHTML='';
   menus.forEach(m=>{
-    const d=document.createElement('div');
-    d.className='list-item';
-    d.textContent = `${m.name} - Rp ${formatRp(m.price)}`;
-    menuList.appendChild(d);
+    menuList.innerHTML+=`
+      <div class="menu-btn" onclick="addCart('${m.name}',${m.price})">
+        ${m.name}<br><small>Rp ${m.price.toLocaleString()}</small>
+      </div>`;
   });
-}
-
-/* ===== KASIR ===== */
-function renderMenuButtons(){
-  menuButtons.innerHTML='';
-  menus.forEach(m=>{
-    const b=document.createElement('div');
-    b.className='menu-btn';
-    b.innerHTML=`${m.name}<br>Rp ${formatRp(m.price)}`;
-    b.onclick=()=>addToCart(m);
-    menuButtons.appendChild(b);
-  });
-}
-
-function addToCart(item){
-  cart.push(item);
-  total += item.price;
   renderCart();
 }
-
+function addCart(name,price){
+  cart.push({name,price});
+  renderCart();
+}
 function renderCart(){
-  cartList.innerHTML='';
-  cart.forEach(i=>{
-    const d=document.createElement('div');
-    d.textContent = `${i.name} - Rp ${formatRp(i.price)}`;
-    cartList.appendChild(d);
+  let t=0;
+  cart.innerHTML='';
+  cart.forEach(c=>{
+    t+=c.price;
+    cart.innerHTML+=`<p>${c.name} - Rp ${c.price.toLocaleString()}</p>`;
   });
-  document.getElementById('total').textContent = formatRp(total);
+  total.innerText=t.toLocaleString();
 }
-
-/* ===== NAV ===== */
-function openMenu(){
-  home.classList.add('hidden');
-  kasirPage.classList.add('hidden');
-  menuPage.classList.remove('hidden');
-  renderMenuList();
-}
-
-function openKasir(){
-  home.classList.add('hidden');
-  menuPage.classList.add('hidden');
-  kasirPage.classList.remove('hidden');
-  renderMenuButtons();
-}
-
-function backHome(){
-  menuPage.classList.add('hidden');
-  kasirPage.classList.add('hidden');
-  home.classList.remove('hidden');
+function resetCart(){
+  cart=[];
+  renderCart();
 }
 </script>
 
 </body>
-</html>
+      </html>
